Fix Java 8 AUR build